# kontor

./: .credo.exs  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  PRIMEVUE_MAPPING.md  README.md  codecov.yml  docker-compose.yml  mix.exs
.archgate/: config.ts
.archgate/adrs/: ARCH-001-himalaya-email-transport.md  ARCH-001-himalaya-email-transport.rules.ts  ARCH-002-tenant-id-scoping.md  ARCH-002-tenant-id-scoping.rules.ts  ARCH-003-ai-sandbox.md  ARCH-003-ai-sandbox.rules.ts  ARCH-004-skill-as-markdown.md  ARCH-004-skill-as-markdown.rules.ts  ARCH-005-burrito-distribution.md  ARCH-005-burrito-distribution.rules.ts  ARCH-006-email-reference-storage.md
.github/workflows/: archgate.yml  ci.yml  release.yml  security.yml
.omc/plans/: email-reference-storage.md  folder-organization-system.md  folder-organization-upgrade.md  ingestion-behaviour-changes.md  open-questions.md
config/: config.exs  dev.exs  runtime.exs  test.exs
frontend/: brand-preview.html  index.html  logo-picker.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest-setup.js  wordmark-picker.html
frontend/e2e/: auth.spec.js  backoffice.spec.js  calendar.spec.js  chat.spec.js  contacts.spec.js  tasks.spec.js
frontend/src/: App.vue  main.js
lib/: kontor.ex  kontor_web.ex
lib/kontor/: application.ex  cache.ex  repo.ex  vault.ex
lib/kontor_web/: auth.ex  endpoint.ex  error_json.ex  router.ex  user_socket.ex
priv/profiles/: casual.md  (+2 more)
spec/: implementation.md
src-tauri/: Cargo.toml  tauri.conf.json
test/: test_helper.exs
(+324 files in other folders)
